--- a/skyfolk/static/sass/configuracion.sass
+++ b/skyfolk/static/sass/configuracion.sass
@@ -16,12 +16,12 @@ hgroup
   margin-bottom: 70px
   position: relative
   border-bottom: 1px solid #66757F
-  padding: 10px 0px
+  padding: 10px 0
 
 span
   position: relative
   top: 40px
-  left: 0px
+  left: 0
 
 h4
   display: block
@@ -101,7 +101,7 @@ h6
 .img-profile
   width: 120px
   height: 120px
-  box-shadow: 0px 1px 5px #1976D2
+  box-shadow: 0 1px 5px #1976D2
   cursor: pointer
   display: block
   position: relative
@@ -194,9 +194,9 @@ label[for="id_password2"]
   height: 570px
   width: 50%
   border-radius: 7px
-  -webkit-box-shadow: 2px 2px 7px 0px #efefef
-  -moz-box-shadow: 2px 2px 7px 0px #efefef
-  box-shadow: 2px 2px 7px 0px #efefef
+  -webkit-box-shadow: 2px 2px 7px 0 #efefef
+  -moz-box-shadow: 2px 2px 7px 0 #efefef
+  box-shadow: 2px 2px 7px 0 #efefef
   border: 1px solid #e0e0e0
 
 #contra li
@@ -222,7 +222,7 @@ label[for="id_password2"]
     display: inline-block
     height: 36px
     line-height: 36px
-    padding: 0px 2rem
+    padding: 0 2rem
     text-transform: uppercase
     vertical-align: middle
     text-decoration: none
@@ -252,7 +252,7 @@ label[for="id_password2"]
 #id_image
   display: list-item
   position: relative
-  top: 0px
+  top: 0
   margin-top: 20px
 
 label[for="id_image"]
@@ -262,7 +262,7 @@ label[for="id_image"]
 #id_backImage
   display: list-item
   position: relative
-  top: 0px
+  top: 0
   margin-top: 20px
 
 label[for="id_backImage"]
@@ -281,7 +281,7 @@ label[for="id_backImage"]
   background-color: transparent
 
 label[for="id_status"]
-  top: 0px
+  top: 0
   font-family: 'Open Sans', sans-serif
   font-weight: 100
   position: relative
@@ -290,7 +290,7 @@ label[for="id_status"]
   opacity: 1
 
 label[for="id_hiddenMenu"]
-  top: 0px
+  top: 0
   font-family: 'Open Sans', sans-serif
   font-weight: 100
   position: relative
@@ -298,7 +298,7 @@ label[for="id_hiddenMenu"]
 hgroup
   position: relative
   margin-bottom: 30px
-  margin-top: 0px
+  margin-top: 0
 
 .cn
   font-size: 20px
@@ -321,7 +321,7 @@ hgroup
 .profilex
   position: relative
   height: 200px
-  box-shadow: 0px 1px 5px grey
+  box-shadow: 0 1px 5px grey
   background-color: transparent
 
   & .delete-profile-image, .add-profile-image
