+ Mejoras en login/signup + Consultar pin en configuracion

--- a/skyfolk/static/sass/miperfil.sass
+++ b/skyfolk/static/sass/miperfil.sass
@@ -506,7 +506,7 @@ body > .container
   background: white
   padding: 0
   border-radius: 0.3rem
-  margin-top: -16.7em
+  margin-top: -235%
   box-shadow: 0 0 1px #1e88e5
 .user-pic
   width: 120px
