--- a/skyfolk/static/css/login-signup.css
+++ b/skyfolk/static/css/login-signup.css
@@ -6,9 +6,10 @@ body {
   margin: auto;
   background-size: 100%;
   max-width: 100%;
-  height: 100%;
+  min-height: 100%;
   flex-direction: column;
-  background-repeat: no-repeat; }
+  background-repeat: no-repeat;
+  flex-wrap: wrap; }
 
 /* Random Background */
 #background_cycler {
@@ -34,8 +35,7 @@ body {
   display: block;
   width: 200px;
   height: 120px;
-  margin: auto;
-  margin-bottom: 10px; }
+  margin: auto auto 10px; }
   .namesn i {
     color: #1e88e5;
     text-shadow: 1px 1px 1px #ccc; }
@@ -48,7 +48,7 @@ body {
     letter-spacing: 0.5px;
     display: inline-block;
     font-family: "Pacifico", cursive;
-    top: 0px;
+    top: 0;
     text-shadow: 1px 1px 1px #1e88e5; }
 
 .logo {
@@ -64,20 +64,20 @@ body {
     height: 100px;
     position: absolute;
     top: 12px;
-    left: 0px; }
+    left: 0; }
 
 .footer_base {
   width: 100%;
   position: fixed;
-  height: 37px;
+  height: auto;
   padding: 10px;
-  bottom: 5px;
-  margin-bottom: -5px;
-  -webkit-transition: all 0.3s ease-in;
-  -moz-transition: all 0.3s ease-in;
-  transition: all 0.3s ease-in;
+  bottom: 0;
+  -webkit-transition: all 0.1s ease-in-out;
+  -moz-transition: all 0.1s ease-in-out;
+  transition: all 0.1s ease-in-out;
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
-  background-color: #fff; }
+  background-color: rgba(255, 255, 255, 0.8);
+  text-align: center; }
   .footer_base a {
     color: #616161;
     font-family: "Open Sans", sans-serif;
@@ -87,13 +87,15 @@ body {
     cursor: pointer;
     text-decoration: none;
     display: inline-block;
-    position: relative;
-    margin-top: -5px; }
+    position: relative; }
   .footer_base a:hover {
-    color: #26A69A; }
-  .footer_base #about, .footer_base #Blog, .footer_base #tutorial, .footer_base #empleo, .footer_base #anunciarse, .footer_base #privacidad {
-    margin-left: 80px;
-    top: -5px; }
+    color: #1e88e5; }
+  .footer_base #about, .footer_base #blog, .footer_base #tutorial, .footer_base #empleo, .footer_base #anunciarse, .footer_base #privacidad {
+    margin-left: 7%; }
+  .footer_base .left {
+    font-weight: 600;
+    position: absolute;
+    left: 0.5%; }
 
 .flex {
   position: relative;
@@ -101,9 +103,6 @@ body {
   width: 40px;
   height: 40px;
   top: -20px; }
-
-footer:hover {
-  height: 100px; }
 
 #login {
   width: 370px;
@@ -114,7 +113,8 @@ footer:hover {
   top: 120px;
   border-radius: 1px;
   font-family: "Open Sans", sans-serif;
-  box-shadow: 0 55px 2px rgba(0, 0, 0, 0.2); }
+  box-shadow: 0 55px 2px rgba(0, 0, 0, 0.2);
+  z-index: 9999; }
 
 #login label, .block-formregister label {
   color: grey;
@@ -208,7 +208,7 @@ form {
 
 .row h5 {
   position: absolute;
-  left: 0%;
+  left: 0;
   text-align: center;
   margin: auto;
   color: #757575;
@@ -220,7 +220,7 @@ form {
 
 /* Muestra los mensajes de error, por ejemplo -> "Contraseña incorrecta en los forms" */
 .errorlist li {
-  color: tomato;
+  color: #f44336;
   display: inline-block;
   position: relative; }
 
@@ -241,7 +241,9 @@ form {
   border-radius: 3px;
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
   display: block;
-  padding: 0px 0px 30px; }
+  padding: 0 0 30px;
+  z-index: 9999;
+  margin-bottom: 5%; }
   .block-formregister #sign_in_register, .block-formregister #sign_up_register {
     position: relative;
     display: inline-block;
@@ -275,7 +277,7 @@ form {
     display: none; }
 
   .namesn {
-    margin-top: -20%; }
+    margin-top: -10%; }
 
   #login {
     width: 350px; } }
