--- a/skyfolk/static/sass/login-signup.sass
+++ b/skyfolk/static/sass/login-signup.sass
@@ -4,14 +4,16 @@
 
 $bluebuttons: #64B5F6
 $blueskyfolk: #1e88e5
+
 body
   padding: 0
   margin: auto
   background-size: 100%
   max-width: 100%
-  height: 100%
+  min-height: 100%
   flex-direction: column
   background-repeat: no-repeat
+  flex-wrap: wrap
 
 /* Random Background */
 #background_cycler
@@ -37,8 +39,7 @@ body
   display: block
   width: 200px
   height: 120px
-  margin: auto
-  margin-bottom: 10px
+  margin: auto auto 10px
   & i
     color: $blueskyfolk
     text-shadow: 1px 1px 1px #ccc
@@ -52,7 +53,7 @@ body
     letter-spacing: 0.5px
     display: inline-block
     font-family: 'Pacifico', cursive
-    top: 0px
+    top: 0
     text-shadow: 1px 1px 1px $blueskyfolk
 
 
@@ -69,20 +70,20 @@ body
     height: 100px
     position: absolute
     top: 12px
-    left: 0px
+    left: 0
 
 .footer_base
   width: 100%
   position: fixed
-  height: 37px
+  height: auto
   padding: 10px
-  bottom: 5px
-  margin-bottom: -5px
-  -webkit-transition: all .3s ease-in
-  -moz-transition: all .3s ease-in
-  transition: all .3s ease-in
+  bottom: 0
+  -webkit-transition: all .1s ease-in-out
+  -moz-transition: all .1s ease-in-out
+  transition: all .1s ease-in-out
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15)
-  background-color: #fff
+  background-color: rgba(255, 255, 255, 0.8)
+  text-align: center
   & a
     color: #616161
     font-family: 'Open Sans', sans-serif
@@ -93,12 +94,14 @@ body
     text-decoration: none
     display: inline-block
     position: relative
-    margin-top: -5px
   & a:hover
-    color: #26A69A
-  & #about, #Blog, #tutorial, #empleo, #anunciarse, #privacidad
-    margin-left: 80px
-    top: -5px
+    color: $blueskyfolk
+  & #about, #blog, #tutorial, #empleo, #anunciarse, #privacidad
+    margin-left: 7%
+  & .left
+    font-weight: 600
+    position: absolute
+    left: 0.5%
 
 .flex
   position: relative
@@ -106,9 +109,6 @@ body
   width: 40px
   height: 40px
   top: -20px
-
-footer:hover
-  height: 100px
 
 #login
   width: 370px
@@ -120,6 +120,7 @@ footer:hover
   border-radius: 1px
   font-family: 'Open Sans', sans-serif
   box-shadow: 0 55px 2px rgba(0, 0, 0, 0.2)
+  z-index: 9999
 
 #login label, .block-formregister label
   color: grey
@@ -218,7 +219,7 @@ form
 
 .row h5
   position: absolute
-  left: 0%
+  left: 0
   text-align: center
   margin: auto
   color: #757575
@@ -231,7 +232,7 @@ form
 
 /* Muestra los mensajes de error, por ejemplo -> "Contraseña incorrecta en los forms" */
 .errorlist li
-  color: tomato
+  color: #f44336
   display: inline-block
   position: relative
 
@@ -252,7 +253,9 @@ form
   border-radius: 3px
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15)
   display: block
-  padding: 0px 0px 30px
+  padding: 0 0 30px
+  z-index: 9999
+  margin-bottom: 5%
 
   & #sign_in_register, #sign_up_register
     position: relative
@@ -293,7 +296,7 @@ form
     display: none
 
   .namesn
-    margin-top: -20%
+    margin-top: -10%
 
   #login
     width: 350px
