--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -32,15 +32,14 @@
   </div>
        {% block content %}{% endblock %}
     <div class="footer_base">
-      <div class="col s3 m3 l10 footer-copyright">
+      <div class="col s3 m3 l12 footer-copyright">
             <div class="container">
-            <a class="left">© 2016 Copyright</a>
-            <a class="right" href="#!">More Links</a>
+            <a class="left">© Skyfolk 2016</a>
             <a id="about" href="/about/home">Sobre Skyfolk</a>
-            <a id="Blog" href="/blog">Blog</a>
+            <a id="blog" href="/blog">Blog</a>
             <a id="tutorial" href="/blog">Ayuda</a>
             <a id="empleo" href="/blog">Trabaja con nosotros</a>
-            <a id="anunciarse" href="/blog">Anunciarse</a>
+            <a id="anunciarse" href="/blog">Publicidad</a>
             <a id="privacidad" href="/blog">Privacidad</a>
             </div>
           </div>
