+ Cargar mas followers/follows al hacer click en boton MORE

--- a/skyfolk/templates/account/cf-privacity.html
+++ b/skyfolk/templates/account/cf-privacity.html
@@ -14,7 +14,7 @@
 </hgroup>
 {% endblock %}
 {% block cf-form %}
-<form id='formulario' method='post' enctype='multipart/form-data' action''>{% csrf_token %}
+<form id='formulario' method='post' enctype='multipart/form-data' action="">{% csrf_token %}
 	{{ privacity_form }}
 <div class="col-lg-12 col-md-12 col-sm-12 wrapper-options">
 	<h1><i>¿Qué significa cada opción?</i></h1>
