--- a/skyfolk/templates/account/amigos.html
+++ b/skyfolk/templates/account/amigos.html
@@ -5,6 +5,7 @@
 {% block extra-css %}
     <link type="text/css" rel="stylesheet" href="{{STATIC_URL}}css/amigos.css"/>
     <link rel="stylesheet" href="{{STATIC_URL}}css/miperfil.css"/>
+    <script src="{{STATIC_URL}}js/friends.js"></script>
 {% endblock %}
 {% block content %}
 <div class="container">
@@ -37,11 +38,9 @@
 {% endfor %}
     </div>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<!--
-<center><img id="loader-ajax" src="{{STATIC_URL}}img/loading.gif"></center>
 
-<center><button id="button-more-friends" type="button" onclick="AJAX_loadFriends()">More!</button></center>
--->
+<center><button id="button-more-friends" type="button" onclick="AJAX_loadFollows()">More!</button></center>
+
 </div>
 {% endblock %}
 {% block extra-js %}
