--- a/skyfolk/templates/account/followers.html
+++ b/skyfolk/templates/account/followers.html
@@ -12,7 +12,7 @@
 {% endblock %}
 {% block content %}
 <div class="container">
-<div class="col-lg-12 col-md-10 col-sm-12">
+<div class="col-lg-12 col-md-10 col-sm-12 container-responsive">
 {% for item in friends_top4 %}
 <div class="col-lg-3 col-md-10 col-sm-12">
     <div class="personal-card">
