--- a/skyfolk/static/sass/mensajes_privados.sass
+++ b/skyfolk/static/sass/mensajes_privados.sass
@@ -27,10 +27,12 @@ body
   text-transform: uppercase
 
 .image-user
-
-  width: 80px
-  height: 80px
-  border-radius: 100%
+  width: 90px
+  height: 90px
+  & img
+    width: 100%
+    height: 100%
+    border-radius: 100%
 
 
 .no_messages
@@ -119,7 +121,7 @@ label[for="id_body"]
   display: inline-block
   height: 36px
   line-height: 36px
-  padding: 0px 2rem
+  padding: 0 2rem
   text-transform: uppercase
   text-decoration: none
   color: #1e88e5
@@ -145,7 +147,7 @@ label[for="id_body"]
   display: inline-block
   height: 36px
   line-height: 36px
-  padding: 0px 2rem
+  padding: 0 2rem
   text-transform: uppercase
   text-decoration: none
   color: #1e88e5
@@ -279,6 +281,8 @@ label[for="id_body"]
   color: #1e88e5
   font-size: 1.2em
   font-weight: 400
+  display: inline-block
+  position: relative
 
 .card .new-message
   position: relative
@@ -296,18 +300,18 @@ label[for="id_body"]
 /* MAS VISIBILIDAD PARA LOS PLACEHOLDER'S AL COMPONER UN MENSAJE */
 /* WebKit, Blink, Edge */
 ::-webkit-input-placeholder
-  color: #424242
+  color: #9e9e9e
 /* Mozilla Firefox 4 to 18 */
 \:-moz-placeholder
-  color: #424242
+  color: #e0e0e0
   opacity:  1
 /* Mozilla Firefox 19+ */
 ::-moz-placeholder
-  color: #424242
+  color: #e0e0e0
   opacity:  1
 /* Internet Explorer 10-11 */
 \:-ms-input-placeholder
-  color: #424242
+  color: #e0e0e0
 
 
 
@@ -329,7 +333,7 @@ label[for="id_body"]
   font-size: 1.3em
   color: #212121
   padding: 7px
-  background-color: #eee
+  background-color: #fafafa
   text-transform: uppercase
   line-height: 2em
 
@@ -348,7 +352,6 @@ label[for="id_body"]
   left: -10px
 
 .messages tbody tr
-  color: tomato
   position: relative
   color: #212121
 
@@ -356,10 +359,7 @@ label[for="id_body"]
   background-color: #f5f5f5
 
 .messages tbody tr td
-  padding-left: 50px
-  padding-top: 10px
-  padding-bottom: 10px
-  padding-right: 10px
+  padding: 10px 10px 10px 50px
 
 /* VIEW */
 
