--- a/skyfolk/templates/account/menu-horizontal.html
+++ b/skyfolk/templates/account/menu-horizontal.html
@@ -25,7 +25,7 @@
       </ul>
 </li>
 {% if user.profile.hiddenMenu == True %}
-      <li><ul class="oldMenu">
+      <li><ul id="hor-menu" class="oldMenu">
         <li onclick="location.href='/'"><i class="fa fa-home" ></i> Inicio</li>
         <li id="publish2"><i class="fa  fa-paper-plane"> </i> Mensaje</li>
         <li onclick="location.href='/following/{{ request.user }}'"><i class="fa fa-user"></i> Seguidos</li>
