--- a/skyfolk/templates/django_messages/base.html
+++ b/skyfolk/templates/django_messages/base.html
@@ -17,10 +17,10 @@
 {% block content %}
   <div class="col-lg-12 col-md-12 col-sm-12 wrapper">
   <nav class="col-lg-3 col-md-12 col-sm-12 menu-messages">
-      <a class="perfil" onclick="window.location.href='/messages/inbox'"><i class="fa fa-inbox"></i><br>Inbox</a>
-      <a class="Contraseña" onclick="window.location.href='/messages/compose'"><i class="fa fa-plus"></i><br>Componer</a>
-      <a class="Contraseña" onclick="window.location.href='/messages/outbox'"><i class="fa fa-lock"></i><br>Enviados</a>
-      <a class="Contraseña" onclick="window.location.href='/messages/trash'"><i class="fa fa-trash"></i><br>Papelera</a>
+      <a onclick="window.location.href='/messages/inbox'"><i class="fa fa-inbox"></i><br>Inbox</a>
+      <a onclick="window.location.href='/messages/compose'"><i class="fa fa-plus"></i><br>Componer</a>
+      <a onclick="window.location.href='/messages/outbox'"><i class="fa fa-lock"></i><br>Enviados</a>
+      <a onclick="window.location.href='/messages/trash'"><i class="fa fa-trash"></i><br>Papelera</a>
   </nav>
 
   <nav class="col-lg-3 col-md-12 col-sm-12 menu-messages-2">
