--- a/skyfolk/templates/django_messages/trash.html
+++ b/skyfolk/templates/django_messages/trash.html
@@ -4,8 +4,8 @@
 
 {% block body %}
 <h3 class="trash_tittle">{% trans "Deleted Messages" %}</h3>
-{% if message_list %}
 <div class="col-lg-6 col-md-12 col-sm-12">
+{% if message_list %}
 <table class="messages">
     <thead>
         <tr><th>{% trans "Sender" %}</th><th>{% trans "Subject" %}</th><th>{% trans "Date" %}</th><th>{% trans "Action" %}</th></tr>
@@ -21,14 +21,14 @@
         <td>{{ message.sent_at|date:_("DATETIME_FORMAT") }}</td>
         <td><a href="{% url 'messages_undelete' message.id %}">{% trans "undelete" %}</a></td>
     </tr>
- <div>
+ </div>
 {% endfor %}
     </tbody>
 </table>
 {% else %}
-<p class="no-msg">{% trans "No messages." %}</p>
-{% endif %}
-<br />
-<p class="no-msg">{% trans "Deleted Messages are removed from the trash at unregular intervals, don't rely on this feature for long-time storage." %}</p>
+    <div class="no-msg">{% trans "No messages." %}</div>
+        {% endif %}
+        <br />
+        <div class="no-msg">{% trans "Deleted Messages are removed from the trash at unregular intervals, don't rely on this feature for long-time storage." %}</div>
 {% endblock %}
 </div>
