--- a/skyfolk/templates/account/cf-profile.html
+++ b/skyfolk/templates/account/cf-profile.html
@@ -17,7 +17,7 @@
 		{% if user_profile.profile.backImage %}
 			<div class="col-lg-12 col-md-12 col-sm-12 profilex" style="background: url('{{user_profile.profile.backImage.url}}') no-repeat center center; background-size: cover;">
 		{% else %}
-			<div class="col-lg-12 col-md-12 col-sm-12 profilex" style="background: url('{{STATIC_URL}}img/backgrounds/5.jpg') no-repeat center center; background-size: cover;">
+			<div class="col-lg-12 col-md-12 col-sm-12 profilex" style="background: url('{{STATIC_URL}}img/nuevo_back.png') no-repeat center center; background-size: cover;">
 		{% endif %}
 		<!-- Si el usuario tiene imagen, lo redireccionamos a change -->
 		<div data-title="Imágen de perfil" class="img-profile">
