--- a/skyfolk/static/css/comentarios.css
+++ b/skyfolk/static/css/comentarios.css
@@ -635,38 +635,42 @@ a.fontawesome-cog:hover {
   display: block;
   width: 100%;
   height: auto; }
-
 .optiones_comentarios ul li {
   list-style-type: none;
   display: inline-block;
   font-size: 1.2em;
-  margin-left: 12px;
   float: right;
-  cursor: pointer; }
-
+  cursor: pointer;
+}
+.optiones_comentarios ul .like-comment, .quote-comment, .reply-comment, .add-timeline { margin-left: 5%; }
+.optiones_comentarios ul .fa-stack, .trash-comment {margin-left: 2.5%; }
+.hate-with-values {margin-right: 2.5% !important;}
 .optiones_comentarios ul li:hover {
-  -webkit-transform: scale(1.15);
-  -moz-transform: scale(1.15);
-  transform: scale(1.15);
-  transition: all 0.3s ease-in-out;
-  -moz-transition: all 0.3s ease-in-out;
-  -webkit-transition: all 0.3s ease-in-out; }
+  transition: all 0.1s ease-in-out;
+  -moz-transition: all 0.1s ease-in-out;
+  -webkit-transition: all 0.1s ease-in-out; }
 
-.optiones_comentarios ul li:hover .fa-heart {
+.optiones_comentarios ul .like-comment:hover{
   color: #f06292; }
-
-.optiones_comentarios ul li:hover .fa-quote-left {
+.optiones_comentarios ul .fa-quote-left:hover {
   color: grey; }
-
-.optiones_comentarios ul li:hover .fa-reply {
+.optiones_comentarios ul .fa-reply:hover {
   color: #1e88e5; }
-
-.optiones_comentarios ul li:hover .fa-tag {
+.optiones_comentarios ul .fa-tag:hover {
   color: #bbdefb; }
-
-.optiones_comentarios .fa-trash:hover {
+.optiones_comentarios ul .fa-trash:hover {
   color: #f44336; }
-
+.optiones_comentarios ul .fa-bolt {
+    top:-5%;
+    left:2%;
+    font-size:80%; }
+.optiones_comentarios ul .hate-comment:hover {
+    color: tomato;  }
+.optiones_comentarios ul .fa-stack .hate-value {
+    position: relative;
+    float: right;
+    left: 4px;
+}
 #tab-comentarios .no-comments {
   width: 100%;
   height: 20%;
