--- a/skyfolk/templates/account/tab-comentarios.html
+++ b/skyfolk/templates/account/tab-comentarios.html
@@ -33,6 +33,9 @@
                         {{ pub.content|replace_decorators|safe }}
                     </div>
                       <div class="wrapper-reply">
+                        {% comment %}
+                        {% include "account/new_reply.html" %}
+                        {% endcomment %}
                         <!-- RESPUESTAS A COMENTARIOS -->
                         {% for reply in pub.replies %}
                         <div class="comment-reply">
@@ -42,16 +45,6 @@
                         </div>
                         {% endfor %}
                     </div>
-                  <div class="text_area">
-                      <textarea placeholder="Escribe tu mensaje..."></textarea>
-                       <div class="botones_ampliado">
-                        <button class="enviar_ampliado"><i class="fa fa-paper-plane"></i>Enviar</button>
-                        <button class="cerrar_ampliado"><i class="fa fa-close"></i><label for="check-{{pub.id}}">Cerrar</label></button>
-                        <button class="difundir_ampliado"><i class="fa fa-bullhorn"></i> Difundir mensaje</button>
-                        <button class="foto_ampliado"><i class="fa fa-paperclip"></i> Añadir archivo</button>
-                        <button class="localizacion_ampliado"><i class="fa fa-map-marker"></i> Añadir localización</button>
-                       </div>
-                  </div>
                   </div>
       <div class="image">
         <div class="usr-img img-responsive">{% avatar pub.author %}</div>
