--- a/skyfolk/templates/account/tab-comentarios.html
+++ b/skyfolk/templates/account/tab-comentarios.html
@@ -20,6 +20,7 @@
             <span id="check-{{pub.id}}" class="zoom-pub"><i class="fa fa-expand fa-lg"> </i></span>
             <!-- Check para ampliar el mensaje... -->
                   <div class="ampliado" id="expand-{{pub.id}}">
+                      <div class="cerrar_ampliado"><i class="fa fa-close"></i></div>
                       <div class="nombre_image">
                     <ul>
                       <li><i class="first">{{pub.author.first_name}} {{pub.author.last_name}}</i></li>
