+ Mejora FRONT + Boton limpiar todas las notificaciones funcional

--- a/skyfolk/static/css/comentarios.css
+++ b/skyfolk/static/css/comentarios.css
@@ -549,7 +549,7 @@ a.fontawesome-cog:hover {
     left:2%;
     font-size:80%; }
 .optiones_comentarios ul .hate-comment:hover {
-    color: tomato;  }
+    color: #3f51b5;  }
 .optiones_comentarios ul .fa-stack .hate-value {
     position: relative;
     float: right;
