--- a/skyfolk/static/css/comentarios.css
+++ b/skyfolk/static/css/comentarios.css
@@ -227,12 +227,12 @@ input[type="checkbox"] {
     opacity: 0.9;
 }
   /* Respuestas en comentario ampliado */
-  .ampliado .wrapper-reply {
-    clear: both;
-    height: auto;
-    width: 90%;
-    background-color: transparent;
-  }
+.ampliado .wrapper-reply {
+  clear: both;
+  height: auto;
+  width: 90%;
+  background-color: transparent;
+}
 .ampliado .triangle-reply {
   display: none;
 }
@@ -670,6 +670,11 @@ a.fontawesome-cog:hover {
     margin-left: 60px;
     top: -50px;
     padding: 10px;
+}
+.comment-reply .author-reply .reply-created {
+  float: right;
+  display: inline-block;
+  font-style: normal;
 }
 .comment-reply .author-reply .triangle {
     width: 10px;
