--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -2239,12 +2239,10 @@ ul.table > li {
     -webkit-transition: all 0.1s linear;
     -moz-transition: all 0.1s linear;
     transition: all 0.1s linear; }
-    .nav-vertical-and-chat li a, .nav-vertical-and-chat li i {
+    .nav-vertical-and-chat li i {
       position: relative;
       display: inline-block;
       margin-top: 5%; }
-    .nav-vertical-and-chat li a {
-      color: #1e88e5; }
     .nav-vertical-and-chat li .notification-img {
       width: 58px;
       height: 58px;
@@ -2257,6 +2255,15 @@ ul.table > li {
     .nav-vertical-and-chat li .notification-verb {
       color: #64b5f6;
       font-weight: 800; }
+    .nav-vertical-and-chat li .fa-remove {
+      position: relative;
+      display: block;
+      float: right;
+      margin: auto;
+      top: -50%;
+      color: #616161; }
+      .nav-vertical-and-chat li .fa-remove:hover {
+        opacity: 0.8; }
     .nav-vertical-and-chat li:hover {
       opacity: 1; }
 
