--- a/skyfolk/static/sass/miperfil.sass
+++ b/skyfolk/static/sass/miperfil.sass
@@ -2117,12 +2117,10 @@ ul.table > li
     -webkit-transition: all .1s linear
     -moz-transition: all .1s linear
     transition: all .1s linear
-    & a,i
+    & i
       position: relative
       display: inline-block
       margin-top: 5%
-    & a
-      color: $blueskyfolk
     & .notification-img
       width: 58px
       height: 58px
@@ -2135,6 +2133,15 @@ ul.table > li
     & .notification-verb
       color: $followcolor
       font-weight: 800
+    & .fa-remove
+      position: relative
+      display: block
+      float: right
+      margin: auto
+      top: -50%
+      color: #616161
+      &:hover
+        opacity: 0.8
     &:hover
       opacity: 1
 
