+ Peticiones de amistad - [COMPLETADAS con DJANGO-NOTIFICATIONS]

--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -2239,7 +2239,14 @@ ul.table > li {
     -webkit-transition: all 0.1s linear;
     -moz-transition: all 0.1s linear;
     transition: all 0.1s linear; }
-    .nav-vertical-and-chat li .accept-response {
+    .nav-vertical-and-chat li .notification-body, .nav-vertical-and-chat li .notification-buttons {
+      position: relative;
+      display: block;
+      width: 90%;
+      height: auto; }
+    .nav-vertical-and-chat li .notification-buttons {
+      margin-top: 2.5%; }
+    .nav-vertical-and-chat li .accept-response, .nav-vertical-and-chat li .rejected-response {
       border: medium none;
       border-radius: 2px;
       height: 36px;
@@ -2249,22 +2256,25 @@ ul.table > li {
       text-transform: uppercase;
       vertical-align: middle;
       text-decoration: none;
-      color: #1e88e5;
       background-color: transparent;
       text-align: center;
       letter-spacing: 0.5px;
       transition: all 0.2s ease-out 0s;
       cursor: pointer;
       float: right;
-      margin-top: 15%;
-      outline: none; }
-      .nav-vertical-and-chat li .accept-response:hover {
+      outline: none;
+      width: 45%; }
+      .nav-vertical-and-chat li .accept-response:hover, .nav-vertical-and-chat li .rejected-response:hover {
         opacity: 0.8;
         background-color: #eee; }
+    .nav-vertical-and-chat li .accept-response {
+      color: #4caf50; }
+    .nav-vertical-and-chat li .rejected-response {
+      color: #f44336; }
     .nav-vertical-and-chat li i {
       position: relative;
       display: inline-block;
-      margin-top: 5%; }
+      margin-top: 2.5%; }
     .nav-vertical-and-chat li .notification-img {
       width: 58px;
       height: 58px;
